--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+
 *.cpp linguist-detectable=false
 *.rb linguist-detectable=false
 *.html linguist-detectable=false
+*.dart linguist-detectable=true
+*.swift linguist-detectable=true
